--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,20 @@
 <resources>
-    <string name="app_name">Test Application</string>
-    <string name="title_activity_meats__scroll">Meats_Scroll</string>
-    <string name="action_settings">Settings</string>
-    <string name="menu_action_logout">Log Out</string>
-    <string name="menu_action_about_us">About Us</string>
-    <string name="menu_action_home">Home</string>
+    <!-- Name of the app -->
+    <string name="app_label">bizdev Recipes</string>
+
+    <!-- Menu actions -->
+    <string name="action_home">Home</string>
+    <string name="action_about_us">About Us</string>
+    <string name="action_logout">Log Out</string>
+    <string name="action_settings">Settings</string>    <!-- Unused -->
+    <string name="action_search">Search</string>
+
+    <!-- Text for the About Us activity -->
     <string name="about_text">We are Software Kings</string>
+
+    <!-- Hint text for the search dialog -->
+    <string name="search_hint">Search ingredients</string>
+
+    <string name="btn_continue">Continue</string>
+
 </resources>
