Add the Ingredients List activity, started via search function in Home activity
The Home activity now has a "Search ingredients" field and an "Add" button.
The search field is an EditText widget with an Add button. When pressed, the Ingredients List activity is started,
and the search query is (for now) appended to a TextView widget in that activity.

The Ingredients List category has a Find Recipe button (no functionality yet) and a Clear List button.
The Clear List button clears the TextView containing ingredients entered by the user.

* Added Up navigation to toolbar on most Activities
* Removed Search button from all toolbars

The toolbar search button is (temporarily) removed because its implementation is currently too complicated and redundant.
For the sake of simplicity, focus is placed on the singular search function via the Home and Ingredients List activities.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,8 +13,14 @@
     <string name="about_text">We are Software Kings</string>
 
     <!-- Hint text for the search dialog -->
-    <string name="search_hint">Search ingredients</string>
+    <string name="hint_search_ingr">Search ingredients</string>
 
     <string name="btn_continue">Continue</string>
+
+    <!-- Button for adding to ingredients list -->
+    <string name="btn_add_ingr">Add</string>
+
+    <string name="btn_find_recipes">Find Recipes</string>
+    <string name="btn_clear_list">Clear List</string>
 
 </resources>
