Display user's ingredients list as entries in a ListView in the IngredientsList activity
In the IngredientsList activity, ingredients entered by the user are now stored in an ArrayList.
They are displayed as entries in a scrollable ListView.
If the user taps on a list entry, it is removed from the ListView and from the ArrayList of ingredients.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="btn_find_recipes">Find Recipes</string>
     <string name="btn_clear_list">Clear List</string>
 
+    <string name="hint_tap_remove_ingr">(Tap an entry to remove it from the list)</string>
+
 </resources>
