--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Name of the app -->
-    <string name="app_label">bizdev Recipes</string>
+    <string name="app_label">Murder Journey Cookbook</string>
 
     <!-- Menu actions -->
     <string name="action_home">Home</string>
@@ -9,7 +9,7 @@
     <string name="action_settings">Settings</string>    <!-- Unused -->
 
     <!-- Text for the About Us activity -->
-    <string name="about_text">We are The Software Kings</string>
+    <string name="about_text">We are the Software Kings</string>
 
     <string name="tv_search">Search recipes by: </string>
 
@@ -87,5 +87,9 @@
     </string-array>
     <string name="title_activity_basic">BasicActivity</string>
     <string name="IngredientListResultMessage">Recipes you can make with those ingredients:</string>
+    <string name="btn_saved_ingredients">Saved Ingredients</string>
+    <string name="btn_saved_recipes">Saved Recipes</string>
+    <string name="btn_add_ingredient">Add Ingredient</string>
+    <string name="text_selection">Please make a selection below</string>
 
 </resources>
