Display cuisines & types as clickable ListView items
* Created BaseActivity abstract class for regular activities to extend.
This eliminates many chunks of code repeated in every activity and handles them all in a single abstract superclass.
This code includes Firebase authentication checking and toolbar/overflow menu creation.

NOTE: The onCreate() method of activities that subclass the BaseActivity abstract class must call
setContentView() BEFORE super.onCreate() in order to avoid accessing a null pointer reference and crashing the app.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,5 +91,6 @@
     <string name="btn_saved_recipes">Saved Recipes</string>
     <string name="btn_add_ingredient">Add Ingredient</string>
     <string name="text_selection">Please make a selection below</string>
+    <string name="btn_home">Home Page</string>
 
 </resources>
