Add Favorites spinner to IngredientsList

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="btn_add">Add</string>
 
     <string name="btn_find_recipes">Find Recipes</string>
-    <string name="btn_clear_list">Clear List</string>
+    <string name="btn_clear">Clear</string>
 
     <string name="hint_tap_remove_ingr">(Tap an entry to remove it from the list)</string>
 
