Add Favorites functionlity to RecipePage and IngredientsPage
Database now logs which recipes/ingredients a user sets as their favorite

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,5 +97,9 @@
     <string name="text_selection">Please make a selection below</string>
     <string name="btn_home">Home Page</string>
     <string name="action_favorite_recipe">Favorite</string>
+    <string name="title_activity_test">TestActivity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 
 </resources>
