- Major Changes to Personal Ingredient Page - Added Menu bar - Redesigned XML file - Added Camera Capture - Added Bottom Menu Bar - Changed Android APP Name and Logo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Name of the app -->
-    <string name="app_label">Murder Journey Cookbook</string>
+    <string name="app_label">Cook It Up</string>
 
     <!-- Menu actions -->
     <string name="action_home">Home</string>
