Completed search by recipe catalog, added comments for all added functions in Home.java.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
         <item>Recipe Name</item>
         <item>Recipe Type</item>
         <item>Recipe Cuisine</item>
+        <item>Recipe Catalog</item>
         <item>Ingredient List</item>
         <item>Ingredient Name</item>
         <item>Ingredient Catalog</item>
